# remotefs-rs-aws-s3

./: CHANGELOG.md  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: coverage.yml  linux.yml  macos.yml  windows.yml
src/: client.rs  lib.rs  object.rs
src/mock/: mod.rs
src/utils/: parser.rs  path.rs
tests/: docker-compose.yml
