[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "remotefs Aws S3 client library"
documentation = "https://docs.rs/remotefs-aws-s3"
edition = "2021"
homepage = "https://veeso.github.io/remotefs-rs-aws-s3/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remotefs", "s3-client"]
license = "MIT"
name = "remotefs-aws-s3"
readme = "README.md"
repository = "https://github.com/veeso/remotefs-rs-aws-s3"
version = "0.3.1"

[dependencies]
chrono = "^0.4.38"
log = "^0.4"
remotefs = "^0.3"
rust-s3 = { version = "^0.34.0-rc4", default-features = false, features = [
  "sync",
] }
thiserror = "^1.0.0"

[dev-dependencies]
env_logger = "^0.11"
pretty_assertions = "^1"
rand = "^0.8.4"
serial_test = "^3"
tempfile = "^3"

[features]
default = ["find", "native-tls"]
# TLS
native-tls = ["rust-s3/sync-native-tls"]
native-tls-vendored = ["rust-s3/sync-native-tls-vendored"]
rustls = ["rust-s3/sync-rustls-tls"]
# misc
find = ["remotefs/find"]
no-log = ["log/max_level_off"]
# tests
github-actions = []
with-s3-ci = []
with-containers = []

[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".dependencies]
path-slash = "^0.1.4"
